hue-alpha creation

--- a/projects/ngx-sam-color-pickers/package.json
+++ b/projects/ngx-sam-color-pickers/package.json
@@ -1,6 +1,13 @@
 {
   "name": "ngx-sam-color-pickers",
   "version": "0.0.1",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
+  },
   "peerDependencies": {
     "@angular/common": "^14.2.0",
     "@angular/core": "^14.2.0",
